# my-second-brain

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  backlink_resolver.py  requirements.txt
.github/workflows/: ci.yml  claude-auto-fix.yml  claude-fix-issue.yml  claude-fix.yml  claude-review.yml  claude.yml
backend/: CLAUDE.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  agent.py  config.py  tool_registry.py  vault_manager.py
backend/app/core/tests/: test_config.py  test_vault_manager.py
backend/app/features/: __init__.py
backend/app/features/chat/: __init__.py  models.py  routes.py
backend/app/features/vault_links/: __init__.py  tool.py
backend/app/features/vault_read/: __init__.py  tool.py
backend/app/features/vault_search/: __init__.py  tool.py
backend/app/features/vault_write/: __init__.py  tool.py
backend/app/features/webhooks/: __init__.py  models.py  routes.py  service.py
backend/app/features/webhooks/tests/: __init__.py  test_routes.py
frontend/: DESIGN_SYSTEM.md  README.md  biome.json  index.html  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  test-debug.test.tsx
frontend/src/api/: client.ts
frontend/src/components/: Chat.tsx  ChatInput.tsx  Header.tsx  MessageBubble.tsx  Sidebar.tsx
frontend/src/hooks/: index.ts  use-chat.test.ts  use-chat.ts  use-theme.test.ts  use-theme.ts
frontend/src/lib/: utils.ts
frontend/src/shared/: types.ts  vault-path.test.ts  vault-path.ts  wikilink-parser.ts  (+1 more)
tests/: __init__.py  conftest.py  test_backlink_resolver.py
(+21 files in other folders)
